# python_notebook_cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: README.md  pyproject.toml  {{cookiecutter.notebook_name}}.ipynb
