[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "3.8.13"
pandas = "1.4.3"
scikit-learn = "1.1.2"
plotly = "5.10.0"
nbformat = "5.4.0"
statsmodels = "0.13.2"
numpy = "1.23.3"
scipy = "1.9.1"

[tool.poetry.dev-dependencies]
ipykernel = "6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
